
0.39    Released: Nov 2 2001.

0.40  pre1
        - anti-aliased polygon fill
        - add general fill to polygon fill
        - make color values smarter for the drawing functions
        - implemented reading and writing the TIFF text tags
        - added prototypes for some of the derivative tags functions
        - read paletted tiff images into Imager paletted images
        - on partial tiff image reads, set the i_incomplete tag
        - tiff reading now uses the error stack
        - use the error stack value from reading bmp files
        - fix an error message in bmp.c
        - added has_chars() method to Imager::Font::FreeType2
        - freetype 2 bounding box function didn't know UTF8 (doh!)
        - write paletted images as paletted to tiff
	- initialize counter for packing 4 bit data
        - don't allocate hashboxes as locals since it overflows the 
	  stack by default in Darwin
        - applied T1 afm patch from Claes Jacobsson
        - split IM_INCPATH and IM_LIBPATH with $Config{path_sep}, so they
          work on Windows
        - Added memory pools for easy cleanup of temp buffers
        - Added read support for sgi .rgb files.
        - io_new_fd() now creates a FDSEEK io object
        - implemented i_readgif_wiol()
        - Imager->read() now uses i_readgif_wiol();
        - extend callback iolayers at C and Perl levels
        - implemented i_writegif_wiol()
        - split out Perl iolayer initialization into private methods
        - add tests for each type of iolayer in t50basicoo.t
        - read/write multi-image tiff files
        - tests in t50basicoo.t for multi-image/file
        - ASCII PBM files were reading white as dark gray (255 vs 1)

=================================================================

        For latest versions check the Imager-devel pages:
        http://www.eecs.umich.edu/~addi/perl/Imager/devel/

=================================================================
